filesdir = $(localstatedir)/files
dist_files_DATA = ad000001.mng ad000001.smk ad000002.mng ad000003.mng \
	ad000004.mng ad000075.mng chathelp-war3-default.txt \
	chathelp-war3-enUS.txt chathelp-war3-frFR.txt chathelp-war3-ruRU.txt \
	chathelp-war3-zhCN.txt newaccount-default.txt newaccount-enUS.txt \
	newbie.save termsofservice-default.txt termsofservice-enUS.txt \
	tos_default.txt tos-unicode_default.txt

usersdir = $(localstatedir)/users
users_DATA =

userscdbdir = $(localstatedir)/userscdb
userscdb_DATA =

bnmaildir = $(localstatedir)/bnmail
bnmail_DATA =

clandir = $(localstatedir)/clans
clan_DATA =

teamdir = $(localstatedir)/teams
team_DATA =

reportsdir = $(localstatedir)/reports
reports_DATA =

chanlogsdir = $(localstatedir)/chanlogs
chanlogs_DATA =

charinfodir = $(localstatedir)/charinfo
charinfo_DATA =

charsavedir = $(localstatedir)/charsave
charsave_DATA =

ladderdir = $(localstatedir)/ladders
ladder_DATA =

statusdir = $(localstatedir)/status
status_DATA =

bakcharsavedir = $(localstatedir)/bak/charsave
bakcharsave_DATA =

bakcharinfodir = $(localstatedir)/bak/charinfo
bakcharinfo_DATA =
