filesdir = $(localstatedir)/files
dist_files_DATA = ad000001.mng ad000001.smk ad000002.mng ad000003.mng \
	ad000004.mng ad000075.mng \
	newbie.save

usersdir = $(localstatedir)/users
users_DATA =

userscdbdir = $(localstatedir)/userscdb
userscdb_DATA =

bnmaildir = $(localstatedir)/bnmail
bnmail_DATA =

clandir = $(localstatedir)/clans
clan_DATA =

teamdir = $(localstatedir)/teams
team_DATA =

reportsdir = $(localstatedir)/reports
reports_DATA =

chanlogsdir = $(localstatedir)/chanlogs
chanlogs_DATA =

userlogsdir = $(localstatedir)/userlogs
chanlogs_DATA =

charinfodir = $(localstatedir)/charinfo
charinfo_DATA =

charsavedir = $(localstatedir)/charsave
charsave_DATA =

ladderdir = $(localstatedir)/ladders
ladder_DATA =

statusdir = $(localstatedir)/status
status_DATA =

bakcharsavedir = $(localstatedir)/bak/charsave
bakcharsave_DATA =

bakcharinfodir = $(localstatedir)/bak/charinfo
bakcharinfo_DATA =
